--- a/en/场/场.12988.wikitext
+++ b/en/场/场.12988.wikitext
@@ -39,6 +39,10 @@
 #[[classifier]] for sporting or recreational activities
 #[[classifier]] for number of exams
 
+==Wu==
+===Pronunciation===
+Zan/Dzan/Jian
+
 [[Category:Mandarin entries with audio links]]
 
 [[fr:场]]
