--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -224,6 +224,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{recons
 * Finnish: {{t+|fi|ympäröidä}}, {{t-|fi|reunustaa}}
 * German: {{t+|de|umgehen}}, {{t-|de|umrunden}}
 * Interlingua: {{t-|ia|costear}}, {{t-|ia|contornar}}
+* Maori: {{t|mi|taku}}
 * Portuguese: {{t+|pt|rodear}}, {{t+|pt|contornar}}
 {{trans-mid}}
 * Russian: {{t+|ru|ограничивать}}
