--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -41,9 +41,9 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Acehnese: {{tø|ace|Jeureuman}}
 * Afrikaans: {{t+|af|Duitsland}}
 * Albanian: {{t+|sq|Gjermania}}
-* {{trreq|am}}
+* Amharic: {{t|am|ጀርመን|tr=ǧärəmänə|sc=Ethi}}
 * Arabic: {{t+|ar|ألمانيا|f|tr='almaanya}}
-* {{trreq|an}}
+* Aragonese: {{t|an|Alemanya|f}}
 * Aramaic: {{tø|arc|ܓܪܡܢ|tr=Jerman}}
 * Armenian: {{t+|hy|Գերմանիա|tr=Germania}}
 * Asturian: {{t+|ast|Alemaña|f}}
@@ -72,7 +72,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Faroese: {{t+|fo|Týskland|n}}
 * Finnish: {{t+|fi|Saksa}}
 * French: {{t+|fr|Allemagne|f}}
-* {{trreq|fur}}
+* Friulian: {{tø|fur|Gjermanie|f}}
 * Galician: {{t+|gl|Alemaña|f}}
 * Georgian: {{t-|ka|გერმანია|tr=germania|sc=Geor}}
 * German: {{t+|de|Deutschland|n}}
@@ -100,7 +100,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Latgalian: {{tø|ltg|Vuoceja|f}}
 * Latin: {{t+|la|Germania|f}}
 * Latvian: {{t+|lv|Vācija|f}}
-* {{trreq|lij}}
+* Ligurian: {{tø|lij|Germania|f}}
 * Lithuanian: {{t+|lt|Vokietija|f}}
 * Livonian: {{tø|liv|Saksāmō}}
 * Low German: {{t+|nds|Düütschland|n}}, {{t-|nds|Düüdschland|n}}
@@ -122,7 +122,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Northern Sami: {{tø|se|Duiskka}}
 * Norwegian: {{t+|no|Tyskland}}, {{t-|no|Føderale Republikken Tyskland}}
 * {{trreq|nov}}
-* {{trreq|oc}}
+* Occitan: {{t|oc|Alemanha|f}}
 * Old English: {{t-|ang|Þeodiscland|n|alt=Þēodiscland}}
 * Old French: {{tø|fro|Alemaigne|f}}
 * Old Provençal: {{tø|pro|Alamagna}}
@@ -140,7 +140,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|Немачка|f|sc=Cyrl}}
 *: Roman: {{t-|sh|Nemačka|f}}
-* {{trreq|scn}}
+* Sicilian: {{t|scn|Girmania|f}}
 * Silesian: {{tø|szl|Mjymcy}}
 * Sinhalese: {{t-|si|ජර්මනිය|tr=jarmaniya|sc=Sinh}}
 * Slovak: {{t-|sk|Nemecko|n}}
@@ -167,7 +167,7 @@ From {{etyl|la}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gallic
 * Vilamovian: {{tø|wym|Daojćłaond}}
 * Volapük: {{t+|vo|Deutän}}, {{qualifier|obsolete}} {{t-|vo|Deut}}
 * Võro: [[S'aksamaa]]
-* {{trreq|wa}}
+* Walloon: {{t|wa|Almagne|f}}
 * Welsh: {{t+|cy|Almaen|f}}
 * West Frisian: {{t+|fy|Dútslân|n}}
 * Xhosa: {{t-|xh|iJamani|c5}}
