--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -311,7 +311,7 @@ Named from {{etyl|pt}} [[Oporto]], a city in [[Portugal]] from whence the wines 
 {{trans-bottom}}
 
 ===Etymology 5===
-Abbreviation of [[portmanteau]].
+{{abbreviation of|portmanteau}}
 
 ====Noun====
 {{en-noun}}
