/* Cantonese */ added "jyut=" (jyutping) data -- zou2 -- to /yue-hanzi/ template <早#20491221>

--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -23,7 +23,7 @@ One possibility is that 早 is a pictograph of [[sun]] (日) over the [[horizon]
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=jou2}}
+{{yue-hanzi|jyut=[[zou2]]|y=jou2}}
 
 # {{defn|lang=yue|sort=日02}}
 
