/* Japanese */ kanji categories <傑#20534467>

--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -39,10 +39,10 @@
 ===Proper noun===
 {{ja-pos|k|proper|hira=すぐる|rom=Suguru}}
 
-# {{given name|male|lang=ja}}
+# {{given name|male|lang=ja|sort=すぐる}}
 
-[[Category:Japanese male given names|すぐる]]
-
+[[Category:Japanese terms written with one Han script character]]
+[[Category:Japanese terms spelled with 傑]]
 ----
 
 ==Korean==
