--- a/en/惵/惵.15626.wikitext
+++ b/en/惵/惵.15626.wikitext
@@ -10,6 +10,15 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[dip6]]|y=dip6}}
+
+# {{defn|lang=yue|sort=心09}}
+
+----
+
 ==Japanese==
 
 ===Kanji===
