--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -110,7 +110,7 @@ From {{etyl|enm}} {{term|crepen|lang=enm}}, from {{etyl|ang}} {{term|creopan|crÄ
 {{trans-bottom}}
 
 ===Verb===
-{{en-verb|creeps|creeping|'''[[crept]]''' or '''[[creeped]]'''|'''[[crept]]''', '''[[creeped]]''', or archaic '''[[cropen]]'''}}
+{{en-verb|creeps|creeping|'''[[crept]]''', '''[[creeped]]''', or obsolete '''[[crope]]'''|'''[[crept]]''', '''[[creeped]]''', or archaic '''[[cropen]]'''}}
 
 # {{intransitive}} To move slowly with the [[abdomen]] close to the ground.
 #: ''Lizards and snakes '''crept''' over the ground.''
