--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -5,7 +5,7 @@
 ===Etymology===
 From {{etyl|enm}} {{term|comen|lang=enm}}, {{term|cumen|lang=enm}}, from {{etyl|ang}} {{term|coman|lang=ang}}, {{term|cuman||to come, go, happen|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|kwemaną||to come|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|gʷem-|lang=ine-pro}}, {{recons|gʷém-|lang=ine-pro}}, {{recons|gʷem-ye-||to come, go, be born|lang=ine-pro}}.
 {{rel-top|cognates}}
-Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{term|kuume||to come|lang=stq}}, {{etyl|fy|-}} {{term|komme||to come|lang=fy}}, {{etyl|nds-}} {{term|kamen|lang=nds}}, {{etyl|nl|-}} {{term|komen||to come|lang=nl}}, {{etyl|de|-}} {{term|kommen||to come|lang=de}}, {{etyl|da|-}} {{term|komme||to come|lang=da}}, {{etyl|sv|-}} {{term|komma||to come|lang=sv}}, {{etyl|is|-}} {{term|koma||to come|lang=is}}, Latin {{term|venio|veniō|come, arrive|lang=la}}, Lithuanian {{term|gimti||to be born, come into the world, arrive|lang=lt}}, Avestan {{term|||tr=ǰamaiti|to go|lang=ae}}, Sanskrit {{term|sc=Deva|गच्छति||tr=gácchati|to go|lang=sa}}.
+Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|stq|-}} {{term|kuume||to come|lang=stq}}, {{etyl|fy|-}} {{term|komme||to come|lang=fy}}, {{etyl|nds|-}} {{term|kamen|lang=nds}}, {{etyl|nl|-}} {{term|komen||to come|lang=nl}}, {{etyl|de|-}} {{term|kommen||to come|lang=de}}, {{etyl|da|-}} {{term|komme||to come|lang=da}}, {{etyl|sv|-}} {{term|komma||to come|lang=sv}}, {{etyl|is|-}} {{term|koma||to come|lang=is}}, Latin {{term|venio|veniō|come, arrive|lang=la}}, Lithuanian {{term|gimti||to be born, come into the world, arrive|lang=lt}}, Avestan {{term|||tr=ǰamaiti|to go|lang=ae}}, Sanskrit {{term|sc=Deva|गच्छति||tr=gácchati|to go|lang=sa}}.
 {{rel-bottom}}
 
 ===Pronunciation===
