remove error (adj/verb confusion, find/found confusion). and add: ===Etymology 4===    ====Noun====  {{en-noun}}    # A thin, single-cut [[file]] for [[comb]]-makers. <found#20545895>

--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -8,17 +8,6 @@
 ===Etymology 1===
 see {{term|find|lang=en}}.
 
-====Adjective====
-{{en-adj}}
-
-# To come upon unexpectedly or after searching.
-
-=====Translations=====
-{{trans-top|Come upon unexpectedly or after searching}}
-* German: {{t+|de|gesammelt}}, {{t-|de|zusammengetragen}}
-{{trans-mid}}
-{{trans-bottom}}
-
 ====Noun====
 {{en-noun|?}}
 
@@ -145,6 +134,13 @@ From {{etyl|frm}} {{term|fondre|lang=frm}}.
 
 =====Translations=====
 {{trans-see|melt}}
+
+===Etymology 4===
+
+====Noun====
+{{en-noun}}
+
+# A thin, single-cut [[file]] for [[comb]]-makers.
 
 ====Statistics====
 * {{rank|last|here|thought|139|found|people|still|just}}
