--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|finþaną|lang=gem-pro}} (compare Dutch {{term|vinden|lang=nl}}, German {{term|finden|lang=de}}, Swedish {{term|finna|lang=sv}}), a secondary verb from {{etyl|ine-pro|en}} {{recons|pontHo-|lang=ine-pro}} (compare Old Irish {{term|étain|lang=sga}} 'I find', {{term|áitt|lang=sga}} 'place', Latin {{term|pons|pōns|lang=la}} 'bridge', Ancient Greek ''póntos'' 'sea', Old Armenian {{term|հուն|tr=hun||ford|lang=xcl}}, Avestan {{term|panta|pantā|lang=ae}} (gen. ''paþō''), Sanskrit ''pánthās'' 'path').
+From {{etyl|enm}} {{term|finden|lang=enm}}, from {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|finþaną|lang=gem-pro}} (compare West Frisian {{term|fine|lang=fy}}, Low German {{term|finden|lang=nds}}, Dutch {{term|vinden|lang=nl}}, German {{term|finden|lang=de}}, Danish {{term|finde|lang=da}}, Swedish {{term|finna|lang=sv}}), a secondary verb from {{etyl|ine-pro|en}} {{recons|pent-||to go, pass; path bridge|lang=ine-pro}}, {{recons|pontHo-|lang=ine-pro}} (compare Old Irish {{term|étain|lang=sga}} 'I find', {{term|áitt|lang=sga}} 'place', Latin {{term|pons|pōns|lang=la}} 'bridge', Ancient Greek ''póntos'' 'sea', Old Armenian {{term|հուն|tr=hun||ford|lang=xcl}}, Avestan {{term|panta|pantā|lang=ae}} (gen. ''paþō''), Sanskrit ''pánthās'' 'path').
 
 ===Pronunciation===
 * {{enPR|fīnd}}, {{IPA|/faɪnd/}}, {{X-SAMPA|/faInd/}}
@@ -92,6 +92,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Latin: {{t-|la|invenire|alt=invenīre}}, {{t-|la|nanciscor}}
 * Latvian: {{t-|lv|atrast}}, {{t-|lv|rast}}
 * Lithuanian: {{t-|lt|surasti}}
+* Low German: {{t|nds|finden}}
 * Macedonian: {{t-|mk|наоѓа|tr=náoǵa|sc=Cyrl}}, {{t-|mk|пронаоѓа|tr=pronáoǵa|sc=Cyrl}}
 * Mizo: {{tø|lus|hmu}}, {{tø|lus|hmuchhuak}}
 * Mongolian: {{t+|mn|олох|sc=Cyrl}}
@@ -115,6 +116,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|fi
 * Tuvan: {{tø|tyv|тывар|tr=tyvar}}
 * Vietnamese: {{t+|vi|tìm}}
 * Volapük: {{t+|vo|tuvön}}
+* West Frisian: {{t|fy|fine}}, {{t|fy|treffe}}
 {{trans-bottom}}
 
 {{trans-top|point out}}
