t+arz:[[برقوق]] ([[WT:EDIT|Assisted]]) <plum#20588511>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -145,7 +145,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Afrikaans: {{t+|af|pruim}}
 * Ainu: {{tø|ain|モマ|tr=moma}}
 * Arabic: {{t-|ar|خوخ|m|tr=xawx|sc=Arab}}, {{t-|ar|برقوق|m|tr=barqūq|sc=Arab}}
-*: Egyptian Arabic: {{tø|arz|برقرقة|f|tr=barʔūʔa|sc=Arab}}
+*: Egyptian Arabic: {{tø|arz|برقرقة|f|tr=barʔūʔa|sc=Arab}}, {{tø|arz|برقوق|m|tr=barʔūʔ|sc=Arab}}
 * Armenian: {{t-|hy|սալոր|tr=salor}}, {{qualifier|dialectal}} {{t-|hy|շլոր|tr=šłor}}
 * Aromanian: {{t-|rup|dhamaskinã|f}}
 * Basque: {{t+|eu|aran}}
