--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -146,6 +146,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{etyl|gem-pro|en}} {{
 * Ainu: {{tø|ain|モマ|tr=moma}}
 * Arabic: {{t-|ar|خوخ|m|tr=xawx|sc=Arab}}, {{t-|ar|برقوق|m|tr=barqūq|sc=Arab}}
 *: Egyptian Arabic: {{tø|arz|برقرقة|f|tr=barʔūʔa|sc=Arab}}, {{tø|arz|برقوق|m|tr=barʔūʔ|sc=Arab}}
+*: Hijazi Arabic: {{tø|acw|بخارى|f|tr=baxxara}}
 *: South Levantine Arabic: {{tø|ajp|خوخ|m|tr=xox}}
 * Armenian: {{t-|hy|սալոր|tr=salor}}, {{qualifier|dialectal}} {{t-|hy|շլոր|tr=šłor}}
 * Aromanian: {{t-|rup|dhamaskinã|f}}
