--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -16,7 +16,7 @@ Abbreviation of {{etyl|la|en}} {{term|exempli gratia|exemplī grātiā|lang=la|f
 ===Adverb===
 Literally, “for the sake of example”.  Used to introduce an [[example]] or list of examples to [[illustrate]] what is being [[discuss]]ed.
 
-#: ''Asia is a large continent, which contains many large nations ('''e.g.''', China, India, and Russia).''
+#: ''Eurasia is a large continent, which contains many large nations ('''e.g.''', China, India, and Russia).''
 
 ====Usage notes====
 * The list of examples following ''e.g.'' should not be exhaustive<ref>'''2002''', [[w:Ernest Gowers|Sir Ernest Gowers]], ''The Complete Plain Words'', ISBN 9781567922035.</ref> (in that case, ''[[i.e.]]'' should be used) and should not be followed by {{term|et cetera}} or {{term|etc.}} as this is a [[tautology]].  (Tautologies do have their place, but use ''etc.'' in this context with care.)
