/* Translations */ export to [[crawl]] <creep#20609378>

--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -36,34 +36,10 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{term|creop
 * [[creep someone out]]
 
 ====Translations====
-{{trans-top|move slowly with the abdomen close to the ground}}
-* Arabic: {{t-|ar|زحف|tr=zaHafa}}
-* Bulgarian: {{t+|bg|пълзя}}, {{t+|bg|лазя}}
-* Catalan: {{t|ca|arrossegar-se}}
-* Chinese:
-*: {{ttbc|cmn}}: {{t-|cmn|爬|tr=pá|sc=Hani}}, {{t-|cmn|匍|tr=pú|sc=Hani}}, {{t|cmn|爬行|tr=páxíng|sc=Hani}}, {{t|cmn|匍匐|tr=púfú|sc=Hani}}, {{t|cmn|蛇行|tr=shéxíng|sc=Hani}}
-* {{ttbc|cs}}: {{t|cs|plazit se}} <!-- link as t-SOP if non-idiomatic; put marked word in|alt=; see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
-* Danish: {{t-|da|krybe}}
-* Dutch: {{t+|nl|kruipen}}
-* Esperanto: {{t-|eo|rampi}}
-* Finnish: {{t+|fi|ryömiä}}, {{t+|fi|madella}}
-* French: {{t+|fr|ramper}}
-{{trans-mid}}
-* German: {{t+|de|kriechen}}, {{t+|de|krabbeln}}
-* Hungarian: {{t+|hu|kúszik}}, {{t+|hu|mászik}}
-* Italian: {{t+|it|strisciare}}
-* Japanese: {{t-|ja|這う|tr=hau}}
-* Persian: {{t+|fa|خزیدن}}
-* Portuguese: {{t+|pt|rastejar}}
-* Russian: {{t+|ru|ползать|tr=pólzat'}}, {{t+|ru|ползти|tr=polztí}}
-* Scottish Gaelic: {{t-|gd|èalaidh}}
-* Spanish: {{t|es|arrastrarse}}, {{t|es|reptar}}
-* Swedish: {{t+|sv|krypa}}, {{t-|sv|kräla}}
-* West Frisian: {{t-|fy|krûpe}}
-{{trans-bottom}}
+{{trans-see|move slowly with the abdomen close to the ground|crawl}}
 
 {{trans-top|grow across a surface rather than upwards}}
-* Bulgarian: {{t+|bg|пълзя}}, {{t-|bg|стеля се}}
+* Bulgarian: {{t+|bg|пълзя|tr=pǎlzjà}}, {{t|bg|стеля|tr=stélja se|alt=стеля се}}
 * Danish: {{t-|da|krybe}}
 * Dutch: {{t+|nl|kruipen}}
 * Finnish: {{t+|fi|ryömiä}}
@@ -72,7 +48,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{term|creop
 * German: {{t+|de|kriechen}}
 * Hungarian: {{t+|hu|kúszik}}
 * Japanese: {{t|ja|這う|tr=hau|sc=Jpan}}, {{t|ja|伝う|tr=tsutau|sc=Jpan}}
-* Russian: {{t+|ru|стелиться|tr=stelít'sja}}
+* Russian: {{t+|ru|стелиться|tr=stelítʹsja}}
 * Swedish: {{t-|sv|klänga}}
 {{trans-bottom}}
 
@@ -84,7 +60,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{term|creop
 * Hungarian: {{t+|hu|lopakodik}}, {{t+|hu|oson}}
 {{trans-mid}}
 * Japanese: {{t|ja|忍び寄る|tr=shinobi-yoru|sc=Jpan}}
-* Russian: {{t+|ru|красться|tr=krást'sja}}
+* Russian: {{t+|ru|красться|tr=krástʹsja}}
 * Scottish Gaelic: {{t-|gd|èalaidh}}
 * Swedish: {{t+|sv|smyga}}
 {{trans-bottom}}
