--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -8,7 +8,7 @@
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=5033<sub>3</sub>|canj=十戈心 (JIP)}}
 
-# favor, benefit, confer kindness
+# [[favor]], [[benefit]], [[confer]] [[kindness]]
 
 ====Derived characters====
 * [[橞]], [[潓]], [[繐]], [[蟪]], [[韢]]
