/* Translingual */ wikilinked four words/terms in definition entry; added "ids=" ⿰忄真 (composition) data to /Han char/ template <慎#20618430>

--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -8,9 +8,9 @@ Note the different forms, corresponds to different forms of [[真]].
 {{Han compound|心|alt1=忄|t1=heart|真|ls=psc|c1=s|c2=p}} – a behavior trait (heart), care, caution. Note that 真 means “truth, genuine, sincerity”, hence connotations of “acting sincerely, with care”.
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=13|four=9408<sub>1</sub>|canj=心十月金 (PJBC)}}
+{{Han char|rn=61|rad=心|as=10|sn=13|four=9408<sub>1</sub>|canj=心十月金 (PJBC)|ids=⿰[[忄]][[真]]}}
 
-# act with care, be cautious
+# [[act]] with [[care]], [[be]] [[cautious]]
 
 ====References====
 * {{Han ref|kx=0398.261|dkj=11024|dj=0735.350|hdz=42336.020|uh=614E|ud=24910|bh=B756|bd=46934}}
