--- a/en/慁/慁.15700.wikitext
+++ b/en/慁/慁.15700.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=10|sn=14|four=6033<sub>0</sub>|canj=田人心 (WOP), X田人心 (XWOP)}}
+{{Han char|rn=61|rad=心|as=10|sn=14|four=6033<sub>0</sub>|canj=田人心 (WOP), X田人心 (XWOP)|ids=⿱[[圂]][[心]]}}
 
 # [[dishonor]], [[disobey]]
 # [[insult]]
