--- a/en/愆/愆.15642.wikitext
+++ b/en/愆/愆.15642.wikitext
@@ -1,7 +1,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=13|four=2133<sub>2</sub>|canj=竹弓心 (HNP)|ids=}}
+{{Han char|rn=61|rad=心|as=09|sn=13|four=2133<sub>2</sub>|canj=竹弓心 (HNP)|ids=⿱[[衍]][[心]]}}
 
 # [[fault]], [[mistake]], [[error]], [[transgression]]
 
