--- a/en/慠/慠.15732.wikitext
+++ b/en/慠/慠.15732.wikitext
@@ -1,9 +1,10 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=14|four=|canj=心土尸大 (PGSK), 心手尸大 (PQSK)}}
+{{Han char|rn=61|rad=心|as=11|sn=14|four=|canj=心土尸大 (PGSK), 心手尸大 (PQSK)|ids=⿰[[忄]][[敖]]}}
 
-# {{defn|Han|sort=心11}}
+# [[proud]], [[haughty]]
+# [[overbearing]], [[rude]]
 
 ====References====
 * {{Han ref|kx=0399.080|dkj=11106|dj=0738.250|hdz=42335.090|uh=6160|ud=24928}}
