--- a/en/慠/慠.15732.wikitext
+++ b/en/慠/慠.15732.wikitext
@@ -11,6 +11,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[ngou6]], [[ou6]]|y=ngou6, ou6}}
+
+# {{defn|lang=yue|sort=心11}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109-110]
+
+----
+
 ==Japanese==
 
 ===Kanji===
