--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -102,6 +102,9 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Dalmatian: {{tø|dlm|faular}}
 * Danish: {{t+|da|tale}}
 * Dutch: {{t+|nl|spreken}}
+* Egyptian:
+*:{{tø|egy|ḏd|sc=Egyp}}
+*:<hiero>D:d</hiero>
 * Esperanto: {{t-|eo|paroli}}
 * Estonian: {{t-|et|rääkima}}
 * Finnish: {{t+|fi|puhua}}
