--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -13,7 +13,7 @@ From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id 
 '''i.e.'''
 
 # {{context|[[initialism]]}} That is; in other words; that is to say.
-#: ''The three U.S. states on the west coast ('''i.e.''', Washington, Oregon, and California) have favorable climates.''
+#: ''The three U.S. states on the west coast ('''i.e.'''Washington, Oregon, and California) have favorable climates.''
 
 ====Usage notes====
 * '''i.e.''' is used to [[explain]], [[clarify]] or [[rephrase]] a statement rather than listing options, in which case '''[[e.g.]]''' should be used.
