--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -22,10 +22,10 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 # {{transitive}} To work the [[lip]]s and [[tongue]] on (an object) to extract [[moisture]] or [[nourishment]]; to absorb (something) in the mouth. {{defdate|from 14th c.}}
 # {{transitive}} To [[pull]] (something) in a given direction, especially without direct contact. {{defdate|from 17th c.}}
 # To perform [[fellatio]]. {{defdate|from 20th c.}}
-# {{intransitive|slang}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
+# {{intransitive|slang|vulgar}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency. {{defdate|from 20th c.}}
 #* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, p. 251:
 #*: . . . and it has a few very high points . . . but as a novel, it '''sucks'''
-
+#* Originated from [[fellatio]].
 ====Synonyms====
 {{checksyns}}
 * To [[draw]]
