--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -222,6 +222,21 @@ From {{etyl|fro|fr}} {{term|France|lang=fro}}, from {{etyl|LL.|fr}} {{term|Franc
 
 ----
 
+==Jèrriais==
+
+===Etymology===
+From {{etyl|fro|roa-jer}} {{term|France|lang=fro}}, from {{etyl|LL.|roa-jer}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=la}}, the name of a {{etyl|gem|roa-jer}} tribe.
+
+===Proper noun===
+{{roa-jer-proper noun|f}}
+
+# [[#English|France]]
+
+[[Category:roa-jer:Countries of Europe]]
+[[Category:roa-jer:France]]
+
+----
+
 ==Middle French==
 
 ===Proper noun===
