/* Verb */ + image <stab#20653946>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -79,6 +79,7 @@ First attested in {{etyl|enm|en}}, probably from {{etyl|gd|en}} {{term|stob||to 
 {{trans-bottom}}
 
 ===Verb===
+[[File:Comic History of Rome p 308 The End of Julius Caesar.jpg|thumb|a man about to be stabbed]]
 {{en-verb|stab|b|ed}}
 
 # {{transitive}} To [[pierce]] or to [[wound]] with a [[pointed]] [[tool]] or [[weapon]], especially a [[knife]] or [[dagger]].
