--- a/en/愋/愋.15647.wikitext
+++ b/en/愋/愋.15647.wikitext
@@ -15,6 +15,18 @@
 
 ----
 
+==Cantonese==
+
+===Hanzi===
+{{yue-hanzi|jyut=[[hyun1]]|y=hyun1}}
+
+# {{defn|lang=yue|sort=心09}}
+
+====References====
+*[http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
