t+lzz:[[{{trreq}}]] t+sva:[[{{trreq}}]] t+xmf:[[{{trreq}}]] t+pjt:[[{{trreq}}]] t-balance ([[WT:EDIT|Assisted]]) <speak#20657072>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -134,15 +134,17 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Latgalian: {{tø|ltg|runuot}}
 * Latin: {{t+|la|dico|alt=dīcō}}, {{t-|la|fabulor|alt=fābulor}}, {{t+|la|loquor}}, {{t+|la|for}}, {{t-|la|effor}}
 * Latvian: {{t-|lv|runāt}}
+* {{trreq|Laz}}
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t+|jbo|tavla}}
 * Luxembourgish: {{t-|lb|schwätzen}}
-* Macedonian: {{t-|mk|зборува|tr=zbóruva}}
 {{trans-mid}}
+* Macedonian: {{t-|mk|зборува|tr=zbóruva}}
 * Malay: {{t|ms|bercakap}}
 * Malayalam: {{t|ml|സംസാരിക്കുക|tr=sansārikkuka|sc=Mlym}}
 * Maltese: {{t-|mt|tkellem}}
 * Marathi: {{t-|mr|बोलणे|sc=Deva}}
+* {{trreq|Mingrelian}}
 * Mongolian: {{t-|mn|ярих|tr=jarih|sc=Cyrl}}
 * Nahuatl: [[tlatoa]]
 * Navajo: {{tø|nv|yáłtiʼ}}
@@ -154,6 +156,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * {{trreq|os}}
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan}}
 * Pipil: {{tø|ppl|taketza}}, {{tø|ppl|taquetza}}
+* {{trreq|Pitjantjatjara}}
 * Polish: {{t+|pl|mówić}}, {{t|pl|rozmawiać}}
 * Portuguese: {{t+|pt|falar}}
 * Punjabi: {{t-|pa|ਬੋਲਣਾ|sc=Guru}}
@@ -174,6 +177,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Slovene: {{t+|sl|govoriti}}
 * Sotho: {{t+|st|bua}}
 * Spanish: {{t+|es|hablar}}
+* {{trreq|Svan}}
 * Swahili: {{t-|sw|ongea}}
 * Swedish: {{t+|sv|tala}}, {{t+|sv|prata}}, {{t+|sv|snacka}}
 * Tagalog: {{t|tl|magsalita}}
