t+tyv:[[чугаалаар]] t+bo:[[སྐད་ཆ་བཤད]] ([[WT:EDIT|Assisted]]) <speak#20657126>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -186,10 +186,11 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Tatar: {{t|tt|сөйләргә|tr=söylärgä|sc=Cyrl}}, {{t|tt|әйтергә|tr=äytergä|sc=Cyrl}}
 * Telugu: {{t|te|మాట్లాడు|tr=māṭlāḍu|sc=Telu}}
 * Thai: {{t+|th|พูด|tr=pôot}}
+* Tibetan: {{t|bo|སྐད་ཆ་བཤད|tr=skad cha bshad|sc=Tibt}}
 * Tupinambá: [[nhe'eng]]
 * Turkish: {{t+|tr|konuşmak}}
 * Turkmen: {{t|tk|gürlemek}}, {{t|tk|geplemek}}, {{t|tk|sözlemek}}
-* {{trreq|tyv}}
+* Tuvan: {{tø|tyv|чугаалаар|tr=čugaalaar}}
 * Ukrainian: {{t-|uk|говорити|tr=hovorýty}}, {{t+|uk|розмовляти|tr=rozmovljáty}}
 * Urdu: {{t-|ur|بولنا|tr=bolnā}}
 * Uzbek: {{t+|uz|gaplashmoq}}
