/* Cantonese */ added "jyut=" (jyutping) data -- caam2 -- to /yue-hanzi/ template <慘#20657180>

--- a/en/慘/慘.15724.wikitext
+++ b/en/慘/慘.15724.wikitext
@@ -15,7 +15,7 @@
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=chaam2|sim=惨}}
+{{yue-hanzi|jyut=[[caam2]]|y=chaam2|sim=惨}}
 
 # {{defn|lang=yue|sort=心11}}
 
