--- a/en/慘/慘.15724.wikitext
+++ b/en/慘/慘.15724.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=11|sn=14|four=9302<sub>2</sub>|canj=心戈戈竹 (PIIH)}}
+{{Han char|rn=61|rad=心|as=11|sn=14|four=9302<sub>2</sub>|canj=心戈戈竹 (PIIH)|ids=⿰[[忄]][[參]]}}
 
 # [[sad]], [[pitiful]], [[wretched]]
 # [[cruel]]
