--- a/en/惨/惨.15613.wikitext
+++ b/en/惨/惨.15613.wikitext
@@ -2,7 +2,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心戈大竹 (PIKH)}}
+{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=心戈大竹 (PIKH)|ids=⿰[[忄]][[参]]}}
 
 # [[sad]], [[pitiful]], [[wretched]]
 # [[cruel]]
