t+eu:[[gona]] ([[WT:EDIT|Assisted]]) <skirt#20678943>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -50,6 +50,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{recons
 * Arabic: {{t-|ar|تنورة|f|tr=tannuura|sc=Arab}}
 * Asturian: {{t-|ast|falda|f}}, {{t-|ast|saya|f}}
 * Baluchi: {{tø|bal|دامن|tr=dáman}}
+* Basque: {{t|eu|gona}}
 * Belarusian: {{t-|be|спадніца|f|tr=spadníca|sc=Cyrl}}
 * Bulgarian: {{t+|bg|пола|f|tr=polá|sc=Cyrl}}
 * Catalan: {{t+|ca|faldilla|f}}
