t+ka:[[ქერა]] t-balance ([[WT:EDIT|Assisted]]) <blond#20706798>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -115,10 +115,11 @@ Alternate etymology connects {{etyl|frk|-}} {{recons|blund|lang=frk}} to {{etyl|
 * Dutch: {{t+|nl|blond}}
 * Esperanto: {{t-|eo|blonda}}
 * Finnish: {{t+|fi|vaalea}}
+* Georgian: {{t|ka|ქერა|sc=Geor}}
 * German: {{t+|de|blond}}, {{t-|de|blondhaarig}}, {{t-|de|flachshaarig}}, {{t+|de|hellhäutig}} {{qualifier|skin}}
+{{trans-mid}}
 * Greek:
 *: Ancient: {{tø|grc|ξανθός|sc=polytonic}}
-{{trans-mid}}
 * Latin: {{t+|la|flavus|alt=flāvus|m}}
 * Macedonian: {{t-|mk|светол|m|tr=svétol}}, {{t-|mk|белолик|m|tr=bélolik}}, {{t-|mk|светла|f|tr=svétla}}, {{t-|mk|белолика|f|tr=belólika}}
 * Russian: {{t+|ru|белый|tr=bélyj}}
