t+eu:[[gurin]] ([[WT:EDIT|Assisted]]) <butter#20711262>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -191,6 +191,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 * Armenian: {{t-|hy|կարագ|tr=karag}}
 * Asturian: {{t-|ast|mantega|f}}
 * Azeri: {{t+|az|yağ}}
+* Basque: {{t|eu|gurin}}
 * Belarusian: {{t-|be|масла|n|tr=másla|sc=Cyrl}}
 * Bengali: {{t-|bn|মাখন|tr=makhôn|sc=Beng}}
 * Breton: {{t+|br|amanenn|m}}
