--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -89,7 +89,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Asturian: {{t+|ast|falar}}
 * {{trreq|av}}
 * Azeri: {{t+|az|danışmaq}}
-* Belarusian: {{t-|be|гаварыць|tr=havarýcʹ}}, {{t-|be|размаўляць|tr=razmaŭljácʹ}}
+* Belarusian: {{t-|be|гаварыць|tr=havarýcʹ}} {{impf}}, {{t-|be|сказаць|tr=skazác’}} {{pf}}, {{t-|be|размаўляць|tr=razmaŭljácʹ}}
 * Bengali: {{t-|bn|বলা|tr=bôla|sc=Beng}}
 * Breton: {{t+|br|komz}}
 * Bulgarian: {{t+|bg|говоря|tr=govórja}}
