--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -89,6 +89,8 @@ First attested in {{etyl|enm|en}}, probably from {{etyl|gd|en}} {{term|stob||to 
 |passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which […] was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
 #: ''If you '''stab''' him in the heart he won't live long enough to retaliate.''
 # {{intransitive}} To [[recklessly]] hit with the [[tip]] of a [[pointed]] [[object]], such as a [[weapon]] or [[finger]] {{non-gloss definition|(often used with [[at]])}}.
+#* Dryden
+#*: None shall dare / With shortened sword to '''stab''' in closer war.
 #: ''He '''stabbed''' at my face with the twig but luckily kept missing my eyes.''
 # {{intransitive}} To cause a [[sharp]], painful [[sensation]] {{non-gloss definition|(often used with [[at]])}}.
 #: ''The snow from the blizzard was '''stabbing''' at my face as I skied down the mountain.''
