--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -15,7 +15,7 @@
 # {{slang}} [[heterosexual|Heterosexual]].
 
 ===Etymology 2===
-Strong conjugation of {{term|heat}}
+Strong conjugation of {{term|heat|lang=en}}
 
 ====Verb====
 '''het'''
@@ -34,6 +34,7 @@ Strong conjugation of {{term|heat}}
 * [[ETH#English|ETH]], [[Eth#English|Eth]], [[eth#English|eth]], [[TEH#English|TEH]], [[teh#English|teh]], [[the#English|the]]
 
 ----
+
 ==Afrikaans==
 ===Verb===
 {{head|af|verb form}}
