--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -90,6 +90,7 @@ From {{etyl|la|en}} {{term|Germania|lang=la}}; likely a [[w:Gaulish language|Gal
 * Irish: {{t-|ga|Gearmáin|alt=an Ghearmáin|f}}
 * Italian: {{t+|it|Germania|f}}
 * Japanese: {{t+|ja|ドイツ|tr=Doitsu}}, {{t+|ja|独逸|tr=Doitsu}} {{qualifier|obsolete}}
+* Jèrriais: {{tø|roa-jer|Allémangne|f}}
 * Kannada: {{t+|kn|ಜರ್ಮನಿ|tr=jarmani|sc=Knda}}
 * Kazakh: {{t|kk|Германия|tr=Germaniya|sc=Cyrl}}
 * Khmer: {{t-|km|​អាល្លឺម៉ង់|tr=āleumong|sc=Khmr}}
