--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=4601<sub>0</sub>|canj=大弓日 (KNA)|ids=⿺[[九]][[日]]}}
 
-# rising sun
+# [[rising]] [[sun]]
 # [[brilliance]]
 # [[radiant]]
 
