/* Vietnamese */ fixed section to use (standard) /vi-hantu/ template and added "sort=" data to sectional /defn/ template; added "References" section and nomfoundation.org link; reversed order of readings <旭#20728120>

--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -60,7 +60,12 @@
 
 ==Vietnamese==
 ===Han character===
-'''旭''' ([[húc]], [[hóc]])
+{{vi-hantu|[[hóc]], [[húc]]|rs=日02}}
+
+# {{defn|lang=vi|sort=日02}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=65ed Nom Foundation]
 
 [[Category:Vietnamese Hán tự]]
 
