# {{slang|obsolete|transitive}} To [[increase]] (stakes) at every [[throw]] of [[dice]], or every [[game]].  #: {{rfquotek|Johnson}} <butter#20776603>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -311,6 +311,8 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 # {{transitive}} To [[spread]] butter on.
 #: '''''Butter''' the toast.''
 # To move one's weight backwards or forwards onto the tips or tails of one's skis or snowboard so only the tip or tail is in contact with the snow.
+# {{slang|obsolete|transitive}} To [[increase]] (stakes) at every [[throw]] of [[dice]], or every [[game]].
+#: {{rfquotek|Johnson}}
 
 =====Derived terms=====
 * [[butter one's bread on both sides]]
