t+nl:[[Tsjechië]] ([[WT:EDIT|Assisted]]) <Czech Republic#20802654>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -32,7 +32,7 @@
 * Crimean Tatar: {{tø|crh|Çeh Cumhuriyeti}}
 * Czech: {{t+|cs|Česká republika|f}}, {{t+|cs|Česko|n}}, {{t+|cs|Čechy|p}}
 * Danish: {{t+|da|Tjekkiet}}
-* Dutch: {{t+|nl|Tsjechische Republiek}}
+* Dutch: {{t+|nl|Tsjechische Republiek}}, {{t|nl|Tsjechië|n}}
 * Esperanto: {{t-|eo|Ĉeĥio}}
 * Estonian: {{t+|et|Tšehhi}}, {{t-|et|Tšehhimaa}}, {{t-|et|Tšehhi Vabariik}}
 * Faroese: {{t-|fo|Kekkia|f|n}}, {{qualifier|rarely}} {{t-|fo|Kekska lýðveldið|n}}
