--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -147,7 +147,7 @@ From {{etyl|enm|en}} {{term|playen|lang=enm}}, {{term|pleyen|lang=enm}}, {{term|
 * Greek: {{t+|el|παίζω|tr=pézo}}
 * Hebrew: {{t-|he|ניגן|alt=ניגן (ב־)|tr=nigén (b'-)}}
 * Hindi: {{t-|hi|बजाना|tr=bajānā|sc=Deva}}
-* Hungarian: játszik ''(noun specifying instrument in superessive case)
+* Hungarian: {{t-|hu|játszik}} ''(noun specifying instrument in superessive case)
 * Icelandic: {{t-|is|spila}}, {{t-|is|spila á}} (+ {{dative}})
 * Irish: {{t-|ga|seinn}}
 * Italian: {{t+|it|suonare}}
