--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -140,6 +140,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Manchu: {{tø|mnc|jimbi|sc=Mong}}
 * Mongolian: {{t-|mn|ирэх|tr=irekh|sc=Cyrl}}
 * Neapolitan: {{tø|nap|venì}}
+* North Frisian: {{tø|frr|kaame}}
 * Norwegian: {{t+|no|komme}}
 * Occitan: {{t+|oc|venir}}, {{t-|oc|vir}}
 * Old English: {{t-|ang|cuman}}
