--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -22,8 +22,9 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 
 # {{context|uncountable}} A soft, fatty foodstuff made by [[churn]]ing the [[cream]] of [[milk]] (generally cow's milk).
 # {{context|countable|obsolete|chemistry}} Any specific [[soft]] [[substance]].
+#: '''''butter''' of antimony''
 # {{context|uncountable}} Any of various foodstuffs made from other foods or oils, similar in consistency to, eaten like or intended as a substitute for butter (''preceded by the name of the food used to make it'').
-#: ''peanut butter''
+#: ''peanut '''butter'''''
 
 =====Derived terms=====
 {{rel-top4|terms derived from ''butter''}}
