--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -89,7 +89,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * German: {{t+|de|gründen}}
 * Italian: {{t+|it|fondare}}
 * {{trreq|ja}}
-* {{trreq|km}}
+* Khmer: {{t|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 {{trans-mid}}
 * {{trreq|ko}}
 * Norwegian: {{t-|no|grunnlegge}}
