--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -3,7 +3,7 @@
 ==Translingual==
 {{Hani-forms|旧|[[舊]]}}
 ===Etymology===
-{{Han simp|舊}}
+{{Han simp|舊}} (removal of 萑 from 𦾔, where 旧 is another writing of 臼)
 
 In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day before today (the past)
 
