--- a/en/c/caught.6831.wikitext
+++ b/en/c/caught.6831.wikitext
@@ -20,6 +20,7 @@
 '''caught'''
 
 # {{en-past of|catch}}
+#: ''I '''caught''' my sister masturbating.''
 
 ====Derived terms====
 * [[caught in the act]]
