Reverted edits by [[Special:Contributions/194.81.46.164|194.81.46.164]]. If you think this rollback is in error, please leave a message on my talkpage. <United States of America#21001043>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -22,7 +22,7 @@
 * Asturian: {{t+|ast|Estaos Xuníos d'América|m-p}}
 * Azeri: {{t+|az|Amerika Birləşmiş Ştatları}}
 * Bashkir: {{tø|ba|Америка Ҡушма Штаттары|tr=Amerika Qušma Štattarı|sc=Cyrl}}
-* Belarusian: {{t-|be|Злучаныя Штаты Амерыкі|m-p|tr=Zlúčanyja Štáty Améryki}}, {{t-|be|ЗША|m-p|tr=ze-
+* Belarusian: {{t-|be|Злучаныя Штаты Амерыкі|m-p|tr=Zlúčanyja Štáty Améryki}}, {{t-|be|ЗША|m-p|tr=ze-še-á}}
 * Bengali: {{t-|bn|মার্কিন যুক্তরাষ্ট্র|tr=markin juktôrashţrô|sc=Beng}}
 * Breton: {{t-|br|Stadoù-Unanet Amerika|f-p}}, {{t-|br|SUA}}
 * Bulgarian: {{t-|bg|Съединени Американски Щати|m-p|tr=Sǎedinéni Amerikánski Štáti}}, {{t-|bg|САЩ|m-p|tr=sašt}}
