--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -14,7 +14,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 {{en-noun|secretaries}}
 
 # {{obsolete}} Someone entrusted with a [[secret]]; a [[confidant]].
-# A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
+#{{senseid|en|person keeping records and handling clerical work}}A person who keeps [[records]], takes [[notes]] and handles general [[clerical]] work.
 # {{often|capitalized}} The [[head]] of a [[department]] of [[government]].
 # A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
 #: ''Ban Ki-Moon is the current '''secretary''' general of the United Nations.''
