--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -18,7 +18,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 #{{senseid|en|head of a department of government}}{{often|capitalized}} The [[head]] of a [[department]] of [[government]].
 #{{senseid|en|leading or managerial position in certain organizations}}A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
 #: ''Ban Ki-Moon is the current '''secretary''' general of the United Nations.''
-# {{US}} A type of [[desk]]; a [[secretaire]].
+#{{senseid|en|type of desk}}{{US}} A type of [[desk]]; a [[secretaire]].
 # A species of [[bird]]; ''[[Sagittarius serpentarius]]''.
 
 ====Derived terms====
