--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -19,7 +19,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 #{{senseid|en|leading or managerial position in certain organizations}}A managerial or leading position in certain non-profit organizations, such as political parties, trade unions, international organizations.
 #: ''Ban Ki-Moon is the current '''secretary''' general of the United Nations.''
 #{{senseid|en|type of desk}}{{US}} A type of [[desk]]; a [[secretaire]].
-# A species of [[bird]]; ''[[Sagittarius serpentarius]]''.
+#{{senseid|en|sagittarius serpentarius}}A species of [[bird]]; ''[[Sagittarius serpentarius]]''.
 
 ====Derived terms====
 * [[secretary bird]]
