--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -10,7 +10,7 @@
 Source: [http://www.kanjinetworks.com/eng/kanji-dictionary/online-kanji-etymology-dictionary.cfm?kanji_id=TAG39 Howell & Morimoto]
 
 ===Etymology===
-{{Han compound|早|止|ls=ic}}, logic of compound unclear.
+{{Han compound|早|止|ls=ic}}, logic of compound unclear. From Old Chinese '''*deʔ''' (Baxter-Sagart).
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6080<sub>1</sub>|canj=日一卜人 (AMYO)|ids=⿱[[曰]][[正]]}}
