t+de:[[Spiel]] t+ga:[[ligean]] ([[WT:EDIT|Assisted]]) <play#21045333>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -504,8 +504,10 @@ From {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {{term|plæg|
 {{trans-top|area of free movement for a part of a mechanism}}
 * Finnish: {{t-|fi|välys}}, {{t-|fi|klappi}}, {{t+|fi|löysä}}
 * French: {{t+|fr|jeu|m}}
+* German: {{t|de|Spiel|n}}
 * Hungarian: [[holtjáték]]
 {{trans-mid}}
+* Irish: {{t|ga|ligean|m}}
 * Russian: {{t+|ru|люфт|m|tr=l'uft}}, {{t+|ru|зазор|m|tr=zazór}}, {{t+|ru|свободный ход|m|tr=svobódnyj xod}}
 * Spanish: {{t+|es|juego|m}}
 * Swahili: {{t+|sw|tamthilia}}
