--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -5,7 +5,7 @@
 * [[chuse]]
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{etyl|ang|en}} {{term|ceosan|ċēosan|to choose, seek out, select, elect, decide, test, accept, settle for, approve|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|keusaną||to taste, choose|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|ǵews-||to taste, choose, enjoy|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|chose|lang=sco}}, {{term|chese||to choose|lang=sco}}, {{etyl|frr|-}} {{term|kese||to choose|lang=frr}}, {{etyl|fy|-}} {{term|kieze||to choose|lang=fy}}, Dutch {{term|kiezen||to choose|lang=nl}}, {{etyl|de|-}} {{term|kiesen||to choose|lang=de}}, {{etyl|da|-}} {{term|kyse||to choose|lang=da}}, Norwegian {{term|kjose||to choose|lang=no}}, {{etyl|sv|-}} {{term|tjusa||to charm, allure|lang=sv}}, Icelandic {{term|kjósa||to choose, vote, elect|lang=is}}, Gothic {{term|𐌺𐌹𐌿𐍃𐌰𐌽||tr=kiusan|to test|lang=got}}, {{etyl|la|-}} {{term|gusto|gustō|taste, sample|pos=verb|lang=la}}.
+From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{etyl|ang|en}} {{term|ceosan|ċēosan|to choose, seek out, select, elect, decide, test, accept, settle for, approve|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|keusaną||to taste, choose|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|ǵews-||to taste, choose, enjoy|lang=ine-pro}}. Cognate with {{etyl|sco|-}} {{term|chose|lang=sco}}, {{term|chese||to choose|lang=sco}}, {{etyl|frr|-}} {{term|kese||to choose|lang=frr}}, {{etyl|fy|-}} {{term|kieze||to choose|lang=fy}}, Dutch {{term|kiezen||to choose|lang=nl}}, {{etyl|nds|-}} {{term|kesen||to choose|lang=nds}}, {{etyl|de|-}} {{term|kiesen||to choose|lang=de}}, {{etyl|da|-}} {{term|kyse||to choose|lang=da}}, Norwegian {{term|kjose||to choose|lang=no}}, {{etyl|sv|-}} {{term|tjusa||to charm, allure|lang=sv}}, Icelandic {{term|kjósa||to choose, vote, elect|lang=is}}, Gothic {{term|𐌺𐌹𐌿𐍃𐌰𐌽||tr=kiusan|to test|lang=got}}, {{etyl|la|-}} {{term|gusto|gustō|taste, sample|pos=verb|lang=la}}.
 
 ====Pronunciation====
 * {{enPR|cho͞oz}}, {{IPA|/tʃuːz/}}, {{X-SAMPA|/tSu:z/}}
