--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -271,9 +271,14 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 {{trans-mid}}
 * Macedonian: {{t-|mk|ѕида|tr=dzída|sc=Cyrl}}
 {{trans-bottom}}
+
 {{trans-top|make into brick}}
 * Czech: {{t|cs|bricknout}}
 * Dutch: {{t+|nl|tot}} {{t+|nl|bakstenen}} {{t+|nl|bakken}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|electronics: to render non-functional}}
 {{trans-mid}}
 {{trans-bottom}}
 
