--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -17,8 +17,9 @@
 * Bulgarian: {{t+|bg|ленен|sc=Cyrl}}
 * Danish: {{t-|da|hørfarvet}}
 * Dutch: {{t+|nl|vlaskleurig}}
-* Japanese: [[亜麻]][[製]]の (あませいの, amasei no)
+* Finnish: {{t+|fi|pellavainen}}
 {{trans-mid}}
+* Japanese: [[亜麻]][[製]]の (あませいの, amasei no)
 * Latin: {{t-|la|lineus|alt=līneus}}
 * Polish: {{t+|pl|lniany|m}}
 * Russian: {{t+|ru|льняной|tr=l'njanój}}
@@ -28,10 +29,11 @@
 * Bulgarian: {{t+|bg|светложълт|sc=Cyrl}}
 * French: {{t-|fr|de lin}}
 * French: {{t-|fr|de lin}}
+* Finnish: {{t+|fi|pellavan värinen}}
+{{trans-mid}}
 * Japanese: [[亜麻]][[色]]の (あまいろの, amairo no)
 * Polish: [[lniany]] {{m}}, [[jasnobrązowy]] {{m}}
 * Portuguese: [[cor de linho]] {{f}}
-{{trans-mid}}
 {{trans-bottom}}
 
 ====See also====
