--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -125,6 +125,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 
 =====Translations=====
 {{trans-top|to enumerate or determine number}}
+* Afrikaans: {{t|af|tel}}
 * Albanian: {{t-|sq|numëroj}}
 * American Sign Language: {{tø|ase|Flat9@BasePalm-PalmDown-FlatB@CenterChesthigh-PalmUp Flat9@InFinger-PalmDown-FlatB@CenterChesthigh}}
 * Arabic: {{t+|ar|عد|tr=3ádda|sc=Arab}}
@@ -165,12 +166,13 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Indonesian: {{t+|id|menghitung}}, {{t+|id|hitung}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
-{{trans-mid}}
 * Kazakh: {{t|kk|санау|tr=sanaw|sc=Cyrl}}
 * Khmer: {{t+|km|រាប់|tr=roap|sc=Khmr}}
 * Korean: {{t+|ko|세다|tr=seda|sc=Kore}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t-|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
+* Kyrgyz: {{t|ky|саноо|tr=sanoo|sc=Cyrl}}
 * Lao: {{t-|lo|ນັບ|tr=nāp|sc=Laoo}}
 * Latin: {{t+|la|numero}}, {{t-|la|computo}}
 * Latvian: {{t-|lv|skaitīt}}, {{t-|lv|rēķināt}}
@@ -180,7 +182,10 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Middle English: {{tø|enm|counten}}
 * Mongolian: {{t-|mn|тоолох|tr=tooloh|sc=Cyrl}}
 * Navajo: {{tø|nv|ółtaʼ}}
+* Norwegian:
+*: Bokmål: {{t|nb|telle}}
 * Norwegian Nynorsk: {{t+|nn|telja}}
+* Old Church Slavonic: {{tø|cu|чисти|tr=čisti|sc=Cyrs}}
 * Old Norse: {{tø|non|telja}}
 * Persian: {{t+|fa|شمردن|tr=šomordan}}
 * Polish: {{t+|pl|liczyć}}
@@ -192,6 +197,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|бројати|sc=Cyrl}}
 *: Roman: {{t-|sh|brojati}}
+* Sinhalese: {{t|si|ගණිනවා|tr=gaṇinavā|sc=Sinh}}
 * Slovak: {{t-|sk|počítať}}
 * Slovene: {{t-|sl|šteti}}, {{t-|sl|prešteti}}
 * Spanish: {{t+|es|contar}}
@@ -200,8 +206,10 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Telugu: {{t+|te|లెక్కించు|tr=lekkiMchu|sc=Telu}}
 * Thai: {{t-|th|นับ|tr=nab|sc=Thai}}
 * Turkish: {{t+|tr|saymak}}
+* Turkmen: {{t|tk|sanamak}}
 * Ukrainian: {{t+|uk|рахувати|tr=raxuváty|sc=Cyrl}}, {{t-|uk|лічити|tr=ličýty|sc=Cyrl}}
 * Urdu: {{t-|ur|گنا|tr=ginnā|sc=ur-Arab}}
+* Uzbek: {{t|uz|sanamoq}}
 * Vietnamese: {{t+|vi|đếm}}
 * Volapük: {{t+|vo|numön}}
 * Walloon: {{t+|wa|conter}}
