--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -164,12 +164,13 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Icelandic: {{t+|is|telja}}
 * Ido: {{t+|io|kontar}}
 * Indonesian: {{t+|id|menghitung}}, {{t+|id|hitung}}
+* {{trreq|Irish}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
 * Kazakh: {{t|kk|санау|tr=sanaw|sc=Cyrl}}
 * Khmer: {{t+|km|រាប់|tr=roap|sc=Khmr}}
-* Korean: {{t+|ko|세다|tr=seda|sc=Kore}}
 {{trans-mid}}
+* Korean: {{t+|ko|세다|tr=seda|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t-|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|саноо|tr=sanoo|sc=Cyrl}}
@@ -179,6 +180,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Lithuanian: {{t|lt|skaičiuoti}}
 * Macedonian: {{t-|mk|брои|tr=brói}}
 * Malay: {{t+|ms|kira}}, {{t+|ms|bilang}}, {{t+|ms|hitung}}
+* {{trreq|Maltese}}
 * Middle English: {{tø|enm|counten}}
 * Mongolian: {{t-|mn|тоолох|tr=tooloh|sc=Cyrl}}
 * Navajo: {{tø|nv|ółtaʼ}}
