--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -169,8 +169,8 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
 * Kazakh: {{t|kk|санау|tr=sanaw|sc=Cyrl}}
 * Khmer: {{t+|km|រាប់|tr=roap|sc=Khmr}}
-{{trans-mid}}
 * Korean: {{t+|ko|세다|tr=seda|sc=Kore}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t-|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|саноо|tr=sanoo|sc=Cyrl}}
@@ -205,6 +205,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Spanish: {{t+|es|contar}}
 * Swedish: {{t+|sv|räkna}}
 * Tajik: {{t|tg|шумурдан|tr=šumurdan|sc=Cyrl}}
+* Tatar: {{t|tt|санарга|tr=sanarğa|sc=Cyrl}}
 * Telugu: {{t+|te|లెక్కించు|tr=lekkiMchu|sc=Telu}}
 * Thai: {{t-|th|นับ|tr=nab|sc=Thai}}
 * Turkish: {{t+|tr|saymak}}
