t+tt:[[сөйләшергә]] ([[WT:EDIT|Assisted]]) <speak#21078533>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -183,7 +183,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Tagalog: {{t|tl|magsalita}}
 * Tajik: {{t-|tg|ҳарф задан|tr=harf zadan|sc=Cyrl}}
 * Tamil: {{t|ta|பேசு|tr=pēcu|sc=Taml}}
-* Tatar: {{t|tt|сөйләргә|tr=söylärgä|sc=Cyrl}}, {{t|tt|әйтергә|tr=äytergä|sc=Cyrl}}
+* Tatar: {{t|tt|сөйләргә|tr=söylärgä|sc=Cyrl}}, {{t|tt|әйтергә|tr=äytergä|sc=Cyrl}}, {{t|tt|сөйләшергә|tr=sөyläşergä|sc=Cyrl}}
 * Telugu: {{t|te|మాట్లాడు|tr=māṭlāḍu|sc=Telu}}
 * Thai: {{t+|th|พูด|tr=pôot}}
 * Tibetan: {{t|bo|སྐད་ཆ་བཤད|tr=skad cha bshad|sc=Tibt}}
