--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -106,7 +106,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Chinese:
 *: Mandarin: {{t|cmn|來|sc=Hani}}, {{t+|cmn|来|tr=lái|sc=Hani}}
 * Crimean Tatar: {{tø|crh|kelmek}}
-* Czech: {{t-|cs|přicházet}} {{impf}}, {{t+|cs|přijít}} {{pf.}}
+* Czech: {{t-|cs|přicházet}} {{impf}}, {{t+|cs|přijít}} {{pf.}}; {{t|cs|přijíždět}} {{impf}}, {{t|cs|přijet}} {{pf.}} {{qualifier|by transport}}
 * Dalmatian: {{tø|dlm|vener}}
 * Danish: {{t-|da|komme}}
 * Dutch: {{t+|nl|komen}}
@@ -150,7 +150,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Pashto: {{t-|ps|راتلل|sc=ps-Arab}}
 * Persian: {{t+|fa|آمدن|tr=âmadan}}
 * Pipil: {{tø|ppl|witz}}, {{tø|ppl|huitz}}
-* Polish: {{t+|pl|przychodzić}} {{impf}}, {{t+|pl|przyjść}} {{pf.}}
+* Polish: {{t+|pl|przychodzić}} {{impf}}, {{t+|pl|przyjść}} {{pf.}}; {{t|pl|przyjeżdżać}} {{impf}}, {{t+|pl|przyjechać}} {{pf.}} {{qualifier|by transport}}
 * Portuguese: {{t+|pt|vir}}
 * Quechua: {{t+|qu|hamuy}}
 * Rohingya: {{tø|rhg|ai}}
@@ -179,7 +179,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Tocharian A: {{tø|xto|kum-}}, {{tø|xto|käm-}}
 * Tocharian B: {{tø|txb|käm-}}
 * Turkish: {{t+|tr|gelmek}}
-* Ukrainian: {{t+|uk|приходити|tr=pryxódyty|sc=Cyrl}}
+* Ukrainian: {{t+|uk|приходити|tr=pryxódyty|sc=Cyrl}} {{impf}}, {{t+|uk|прийти|tr=pryjtý|sc=Cyrl}} {{pf.}}; {{t|uk|приїжджати|tr=pryjiždžáty|sc=Cyrl}}, {{t|uk|приїхати|tr=pryjíxaty|sc=Cyrl}} {{qualifier|by transport}}
 * Urdu: {{t+|ur|آنا|tr=ānā}}
 * Venetian: {{tø|vec|vegner}}
 * Vietnamese: {{t+|vi|lại}}
