--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -98,8 +98,8 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Bakhtiari: {{tø|bqi|اودن|tr=aweðen|sc=fa-Arab}}
 * Basque: {{t-|eu|etorri}}
 * Bavarian: {{tø|bar|kemma}}
-* Belarusian: {{t-|be|прыходзіць|tr=pryxódzicʹ|sc=Cyrl}},  {{impf}} {{t|be|прыйсці|sc=Cyrl}} {{pf.}}, {{t|be|прыязджаць|tr=pryjazdžácʹ|sc=Cyrl}}, {{t|be|прыехаць|tr=pryjéxacʹ|sc=Cyrl}} {{qualifier|by transport}}
-* Bulgarian: {{t+|bg|идвам|tr=ídvam}}
+* Belarusian: {{t-|be|прыходзіць|tr=pryxódzicʹ|sc=Cyrl}} {{impf}}, {{t|be|прыйсці|sc=Cyrl}} {{pf.}}, {{t|be|прыязджаць|tr=pryjazdžácʹ|sc=Cyrl}}, {{t|be|прыехаць|tr=pryjéxacʹ|sc=Cyrl}} {{qualifier|by transport}}
+* Bulgarian: {{t+|bg|идвам|tr=ídvam}} {{impf}}, {{t|bg|дойда|tr=dojdá}} {{pf.}}
 * Burmese: {{t+|my|လာ|tr=la|sc=Mymr}}
 * Catalan: {{t+|ca|venir}}
 * {{trreq|ce}}
@@ -135,7 +135,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Lao: {{t-|lo|ມາ|tr=maa|sc=Laoo}}
 * Latin: {{t+|la|venio}}
 * Lojban: {{t+|jbo|klama}}
-* Macedonian: {{t-|mk|доаѓа|tr=dóaǵa|sc=Cyrl}}, {{t-|mk|иде|tr=íde|sc=Cyrl}}
+* Macedonian: {{t-|mk|иде|tr=íde|sc=Cyrl}} {{impf}}, {{t-|mk|доаѓа|tr=dóaǵa|sc=Cyrl}} {{pf.}}
 {{trans-mid}}
 * Malay: {{t+|ms|datang}}, {{t-|ms|mari}}
 * Manchu: {{tø|mnc|jimbi|sc=Mong}}
