--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -173,6 +173,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Swedish: {{t+|sv|komma}}
 * Tajik: {{t-|tg|омадан|tr=omadan|sc=Cyrl}}
 * Tamil: {{t+|ta|வா|tr=vā}}
+* Tatar: {{t|tt|килергә|tr=kilergä|sc=Cyrl}}
 * {{trreq|te}}
 * Thai: {{t+|th|มา|tr=maa}}
 * Tibetan: {{t|bo|ཡོང|tr=yong|sc=Tibt}}, {{t|bo|ཕེབས|tr=phebs|sc=Tibt}} {{qualifier|honorific}}
