--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -98,7 +98,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Bakhtiari: {{tø|bqi|اودن|tr=aweðen|sc=fa-Arab}}
 * Basque: {{t-|eu|etorri}}
 * Bavarian: {{tø|bar|kemma}}
-* Belarusian: {{t-|be|прыходзіць|tr=pryxódzicʹ|sc=Cyrl}} {{impf}}, {{t|be|прыйсці|sc=Cyrl}} {{pf.}}, {{t|be|прыязджаць|tr=pryjazdžácʹ|sc=Cyrl}}, {{t|be|прыехаць|tr=pryjéxacʹ|sc=Cyrl}} {{qualifier|by transport}}
+* Belarusian: {{t-|be|прыходзіць|tr=pryxódzicʹ|sc=Cyrl}} {{impf}}, {{t|be|прыйсці|sc=Cyrl}} {{pf.}}, {{t|be|прыязджаць|tr=pryjazdžácʹ|sc=Cyrl}} {{impf}}, {{t|be|прыехаць|tr=pryjéxacʹ|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
 * Bulgarian: {{t+|bg|идвам|tr=ídvam}} {{impf}}, {{t|bg|дойда|tr=dojdá}} {{pf.}}
 * Burmese: {{t+|my|လာ|tr=la|sc=Mymr}}
 * Catalan: {{t+|ca|venir}}
@@ -156,7 +156,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Rohingya: {{tø|rhg|ai}}
 * Romanian: {{t-|ro|veni}}
 * Romansch: {{t-|rm|vegnir}}, {{t-|rm|vagnir}}, {{t-|rm|neir}}, {{t-|rm|gnir}}
-* Russian: {{t+|ru|приходить|tr=prixodítʹ}} {{impf}}, {{t+|ru|прийти|tr=prijtí}} {{pf.}}; {{t|ru|приезжать|tr=pryjezžátʹ|sc=Cyrl}}, {{t|ru|приехать|tr=pryjéxatʹ|sc=Cyrl}} {{qualifier|by transport}}
+* Russian: {{t+|ru|приходить|tr=prixodítʹ}} {{impf}}, {{t+|ru|прийти|tr=prijtí}} {{pf.}}; {{t|ru|приезжать|tr=pryjezžátʹ|sc=Cyrl}} {{impf}}, {{t|ru|приехать|tr=pryjéxatʹ|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
 * {{trreq|sa}}
 * Sardinian: {{t-|sc|bènnere}}, {{t-|sc|benni}}, {{t-|sc|bènniri}}, {{t-|sc|vènnere}}
 * Scots: {{tø|sco|cum}}
@@ -180,7 +180,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Tocharian A: {{tø|xto|kum-}}, {{tø|xto|käm-}}
 * Tocharian B: {{tø|txb|käm-}}
 * Turkish: {{t+|tr|gelmek}}
-* Ukrainian: {{t+|uk|приходити|tr=pryxódyty|sc=Cyrl}} {{impf}}, {{t+|uk|прийти|tr=pryjtý|sc=Cyrl}} {{pf.}}; {{t|uk|приїжджати|tr=pryjiždžáty|sc=Cyrl}}, {{t|uk|приїхати|tr=pryjíxaty|sc=Cyrl}} {{qualifier|by transport}}
+* Ukrainian: {{t+|uk|приходити|tr=pryxódyty|sc=Cyrl}} {{impf}}, {{t+|uk|прийти|tr=pryjtý|sc=Cyrl}} {{pf.}}; {{t|uk|приїжджати|tr=pryjiždžáty|sc=Cyrl}} {{impf}}, {{t|uk|приїхати|tr=pryjíxaty|sc=Cyrl}} {{pf.}} {{qualifier|by transport}}
 * Urdu: {{t+|ur|آنا|tr=ānā}}
 * Venetian: {{tø|vec|vegner}}
 * Vietnamese: {{t+|vi|lại}}
