--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -168,11 +168,11 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Sardinian: {{t-|sc|bènnere}}, {{t-|sc|benni}}, {{t-|sc|bènniri}}, {{t-|sc|vènnere}}
 * Scots: {{tø|sco|cum}}
 * Scottish Gaelic: {{t-|gd|thig}}
-* Sicilian: {{t+|scn|vèniri}}
-* Sinhalese: {{t-|si|එනවා|tr=enavā|sc=Sinh}}
 * Serbo-Croatian
 *: Cyrillic: {{t|sh|доћи|sc=Cyrl}} {{pf.}}
 *: Roman: {{t|sh|doći}} {{pf.}}
+* Sicilian: {{t+|scn|vèniri}}
+* Sinhalese: {{t-|si|එනවා|tr=enavā|sc=Sinh}}
 * Slovak: {{t-|sk|prichádzať}} {{impf}}, {{t-|sk|prísť}} {{pf.}}
 * Slovene: {{t+|sl|priti}} {{pf.}}
 * Spanish: {{t+|es|venir}}
@@ -228,7 +228,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 {{trans-bottom}}
 
 {{trans-top|to orgasm}}
-* Bulgarian: {{t+|bg|свършвам|tr=svarshvam}}
+* Bulgarian: {{t+|bg|свършвам|tr=svǎ̀ršvam}}
 * Catalan: {{t-|ca|escórrer-se}}
 * Chinese:
 *: Mandarin: {{t-|cmn|射|tr=shè|sc=Hani}}, {{t-|cmn|射精|tr=shèjīng|sc=Hani}}, {{qualifier|slang}} {{t|cmn|出水|tr=chūshuǐ|sc=Hani}}
@@ -247,9 +247,9 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Japanese: {{t+|ja|いく|tr=iku}}
 * Macedonian: {{t-|mk|свршува|tr=sv'ršuva|sc=Cyrl}}
 * Norwegian: {{t+|no|komme}}
-* Polish: {{t+|pl|dochodzić}}, {{t+|pl|dojść}}
+* Polish: {{t+|pl|dochodzić}} {{impf}}, {{t+|pl|dojść}} {{pf.}}
 * Portuguese: {{t+|pt|gozar}}
-* Russian: {{t+|ru|кончать|tr=končát’}} {{impf}}, {{t+|ru|кончить|tr=kónčit’}} {{pf.}}
+* Russian: {{t+|ru|кончать|tr=končátʹ}} {{impf}}, {{t+|ru|кончить|tr=kónčitʹ}} {{pf.}}
 * Serbo-Croatian: {{t-|sh|svršiti}} {{qualifier|colloquial}}
 * Spanish: {{t+|es|correrse}}
 * Thai: {{t-|th|ถึงจุดสุดยอด|sc=Thai|tr=těung jùt sùt yôt}}, {{t+|th|เสร็จ|sc=Thai|tr=sèt}}
@@ -259,8 +259,9 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 * Bulgarian: {{t-|bg|случвам се}}, {{t+|bg|ставам}}
 * French: {{t+|fr|devenir}}
 * Hungarian: {{t+|hu|válik}}
-{{trans-mid}}
 * Macedonian: {{t-|mk|станува|tr=stánuva|sc=Cyrl}}
+{{trans-mid}}
+* Russian: {{t|ru|становиться|tr=stanovítʹsja|sc=Cyrl}} {{impf}}, {{t|ru|стать|tr=statʹ|sc=Cyrl}} {{pf.}}
 * Vietnamese: {{t+|vi|thành}}, {{t+|vi|trở nên}}, {{t+|vi|trở thành}}
 * Zulu: {{t-|zu|ba|alt=-ba}}
 {{trans-bottom}}
@@ -268,6 +269,7 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 {{trans-top|to turn out to be}}
 * Hungarian: {{t-|hu|bizonyul}}
 {{trans-mid}}
+* Russian: {{t|ru|оказываться|tr=okázyvatʹsja|sc=Cyrl}} {{impf}}, {{t|ru|оказываться|tr=okazátʹsja|sc=Cyrl}} {{pf.}}
 {{trans-bottom}}
 
 ===See also===
