--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -41,6 +41,7 @@ Compare {{etyl|sco|-}} {{term|came|lang=sco||comb}}, {{term|caim|lang=sco||comb}
 ====Translations====
 {{trans-top|A grooved strip of lead}}
 {{trans-mid}}
+* French: {{t|fr|plomb|m}}
 {{trans-bottom}}
 
 ===Statistics===
