--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -25,6 +25,12 @@ Old English? {{term|clingan}} to adhere, to wither; akin to {{etyl|da|en}} {{ter
 #* Mrs. Hemans
 #*: And what hath life for thee / That thou shouldst '''cling''' to it thus?
 # To adhere to an object, without being affixed, in such a way as to follow its contours. Used especially of fabrics and films.
+# {{context|transitive}} To cause to adhere to, especially by twining round or embraching.
+#* Jonathan Swift
+#*: I '''clung''' legs as close to his side as I could.
+# {{context|transitive}} To cause to dry up or wither.
+#* Shakespeare
+#*: If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.
 
 ====Derived terms====
 * [[cling film]] / [[clingfilm]]
