--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -31,11 +31,13 @@ Old English? {{term|clingan}} to adhere, to wither; akin to {{etyl|da|en}} {{ter
 # {{context|transitive}} To cause to dry up or wither.
 #* Shakespeare
 #*: If thou speak'st false, / Upon the next tree shalt thou hang alive, / Till famine '''cling''' thee.
+# {{context|figurative|with preposition to|lang=en}} to [[be fond of]], to [[feel]] strongly about
 
 ====Derived terms====
 * [[cling film]] / [[clingfilm]]
 
 ====Translations====
+
 {{trans-top|hold tightly}}
 * Arabic: {{t-|ar|تمسك|tr=tamassaka}}
 * Armenian: {{t-|hy|կառչել|tr=kaṙčel}}
@@ -51,13 +53,17 @@ Old English? {{term|clingan}} to adhere, to wither; akin to {{etyl|da|en}} {{ter
 * Indonesian: {{t+|id|sangkut|alt=menyangkut}}, {{t+|id|sangkut|alt=menyangkutkan}}, {{t+|id|gantung|alt=bergantung}}, {{t+|id|gantung|alt=menggantung}}, {{t+|id|gantung|alt=menggantungkan}}
 {{trans-mid}}
 * Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources| ISBN 8839551107]]. [http://www.oxfordparavia.it/ Online version]</ref>, {{t+|it|abbarbicarsi}}
-* Japanese: {{t+|ja|掛ける}},  {{t+|ja|かける|tr=kakeru}},  {{t-|ja|ぶら下がる|tr=ぶらさがる, burasagaru}} (''vi''),  {{t-|ja|ぶら下げる|tr=ぶらさげる, burasageru}} (''vt'')
+* Japanese: {{t+|ja|掛ける}},  {{t+|ja|かける|tr=kakeru}},  {{t-|ja|ぶら下がる|tr=ぶらさがる, burasagaru}} {{qualifier|intransitive}},  {{t-|ja|ぶら下げる|tr=ぶらさげる, burasageru}} {{qualifier|transitive}}
 * Maori: {{t|mi|whakaawhiawhi}}
 * Norwegian: {{t-|no|klenge}}
 * Polish: {{t-|pl|przylgnąć}}
 * Portuguese: {{t+|pt|agarrar}}
 * Russian: {{t+|ru|льнуть|tr=l'nut'}}, {{t+|ru|прилипать|tr=prilipát'}}, {{t+|ru|цепляться|tr=ceplját'sja}}
 * Spanish: {{t+|es|sostener}}, {{t+|es|aferrar|alt=aferrarse}}, {{t+|es|sujetar}}, {{t+|es|agarrar|alt=agarrarse}}
+{{trans-bottom}}
+
+{{trans-top|feel strongly about}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ===References===
