t+es:[[estar apegado]] ([[WT:EDIT|Assisted]]) <cling#21152861>

--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -65,6 +65,7 @@ Old English? {{term|clingan}} to adhere, to wither; akin to {{etyl|da|en}} {{ter
 {{trans-top|feel strongly about}}
 {{trans-mid}}
 * German: {{t|de|hängen|alt=hängen an}}
+* Spanish: {{t|es|estar apegado|alt=estar apegado a}}
 {{trans-bottom}}
 
 ===References===
