--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -60,6 +60,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 {{trans-mid}}
 * Jèrriais: {{tø|roa-jer|fliotte|f}}, {{tø|roa-jer|liège|m}}
 * Lithuanian: {{t-|lt|plaustas|m}} {{qualifier|raft}}, {{t-|lt|plūdė|f}} {{qualifier|of an angle or a net}}
+* Maori: {{t|mi|kārewa}}
 * Norwegian: {{t-|no|dupp|m}} (angling float)
 * Romanian: {{t-|ro|plută|f}}, {{t-|ro|plutitor|n}}
 * Russian: {{t+|ru|плот|m|tr=plot}} {{qualifier|raft}}, {{t+|ru|поплавок|m|tr=poplavók}} {{qualifier|of an angle or a net}}
