--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -59,8 +59,8 @@
 * {{l|ja|sc=Jpan|地表|tr=ちひょう, chihyō}}
 * {{l|ja|sc=Jpan|地方|tr=ちほう, chihō}}
 * {{l|ja|sc=Jpan|地震|tr=じしん, jishin}}
-* [[天地]] ([[てんち]], ''[[tenchi]]''): heaven and earth
-* [[天變地異]] ([[てんへんちい]], ''[[tenpenchī]]''): [[turmoil]] throughout heaven and earth
+* {{l|ja|sc=Jpan|天地|tr=てんち, tenchi}}: heaven and earth
+* {{l|ja|sc=Jpan|天變地異|tr=てんぺんちい, tenpen chii}}: [[turmoil]] throughout heaven and earth
 {{bottom}}
 
 ===Noun===
