+senseid: bony ridge of the nose ([[WT:EDIT|Assisted]]) <bridge#21278136>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -20,7 +20,7 @@ From {{etyl|enm|en}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg
 
 # A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
 #: ''The rope '''bridge''' crosses the river.''
-# {{context|anatomy|lang=en}} The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
+#{{senseid|en|bony ridge of the nose}}{{context|anatomy|lang=en}} The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]].
 #: ''Rugby players often break the '''bridge''' of their noses.''
 # {{context|medicine|lang=en}} A rudimentary procedure before definite solution
 #: ''ECMO is used as a bridge to surgery to stabilize the patient''
