t+qu:[[tuytuy]] ([[WT:EDIT|Assisted]]) <float#21284211>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -204,6 +204,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Lithuanian: {{t-|lt|plūduriuoti}} {{impf}}; {{t+|lt|plaukti}} {{impf}}
 * Maori: {{t|mi|mānu}}
 * Portuguese: {{t+|pt|boiar}}, {{t+|pt|flutuar}}
+* Quechua: {{t|qu|tuytuy}}
 * Romanian: {{t+|ro|pluti}}
 * Romansch: {{t-|rm|flottar}}
 * Russian: {{t+|ru|плавать|tr=plávat’}} {{impf}}; {{t+|ru|всплывать|tr=vsplyvát’}} {{pf.}}, {{t+|ru|всплыть|tr=vsplyt’}} {{impf}} {{qualifier|to reach the surface}}
