--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -55,7 +55,7 @@ From {{etyl|he|en}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yis
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}, {{t-|da|Staten Israel}}
 * Dutch: {{t+|nl|Israël|n}}
-* Dzongkha: {{t-|dz|ཨིཛ་རཱེལ་|sc=Tibt}}
+* Dzongkha: {{t-|dz|ཨིཛ་རཱེལ་|sc=Tibt|tr=idz rael}}
 * Esperanto: {{t-|eo|Israelo}}, {{t-|eo|Izraelo}}
 * Estonian: {{t+|et|Iisrael}}
 * Finnish: {{t+|fi|Israel}}
@@ -123,7 +123,7 @@ From {{etyl|he|en}} {{term|ישראל|יִשְׂרָאֵל|Israel|lang=he|tr=yis
 * Tamil: {{t-|ta|இஸ்ரேல்|tr=isrēl|sc=Taml}}
 * Tatar: {{t-|tt|Исраил|tr=İsrail|sc=Cyrl}}
 * Thai: {{t-|th|ประเทศอิสราเอล|tr=bpràtâyt ìtsàrăa-ayn}}, {{t+|th|อิสราเอล|tr=ìt-sà-răa-ayn}}
-* Tibetan: {{t-|bo|ཨི་སི་ར་ཨེལ།|sc=Tibt}}
+* Tibetan: {{t-|bo|ཨི་སི་ར་ཨེལ།|sc=Tibt|tr=i si ra el}}
 * Turkish: {{t+|tr|İsrail}}
 * Turkmen: {{t-|tk|Izrail}}
 * Ukrainian: {{t+|uk|Ізраїль|m|tr=Izrájil’}}
