--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -2,7 +2,7 @@
 {{slim-wikipedia|dab=push}}
 
 ===Etymology===
-{{etyl|enm|en}} {{term|pushen|pushen, poshen, posson|lang=enm}}, from {{etyl|frm|en}} {{term|pousser||lang=frm}}  (Modern French {{term|pousser|lang=fr}}) from {{etyl|fro|en}} {{term|poulser||lang=fro}}, from {{etyl|la|en}} {{term|pulsare|lang=la}}, frequentative of ''[[pellere]]'' (past participle ''[[pulsus]]'') "to beat, strike". Displaced native {{etyl|enm|-}} {{term|thrucchen||to push|lang=enm}} (from {{etyl|ang|-}} {{term|þryccan||to push|lang=ang}}), {{etyl|enm|-}} {{term|scauten||to push, thrust|lang=enm}} (from {{non}} {{term|skota||lang=non}}), {{etyl|enm|-}} {{term|schoven||to push, shove|lang=enm}} (from {{etyl|ang|-}} {{term|scofian||lang=ang}}), {{etyl|enm|-}} {{term|schuven||to shove, push|lang=enm}} (from {{etyl|ang|-}} {{term|scufan|scūfan|lang=ang}}, {{term|sceofan|scēofan|to shove, push, thrust|lang=ang}}), {{etyl|enm|-}} {{term|thuden||lang=enm}}, {{term|thudden||to push, press, thrust|lang=enm}} (from {{etyl|ang|-}} {{term|þydan|þȳdan|lang=ang}}, {{term|þyddan||to thrust, press, push|lang=ang}}).
+{{etyl|enm|en}} {{term|pushen|pushen, poshen, posson|lang=enm}}, from {{etyl|frm|en}} {{term|pousser||lang=frm}}  (Modern French {{term|pousser|lang=fr}}) from {{etyl|fro|en}} {{term|poulser||lang=fro}}, from {{etyl|la|en}} {{term|pulsare|lang=la}}, frequentative of ''[[pellere]]'' (past participle ''[[pulsus]]'') "to beat, strike". Displaced native {{etyl|enm|-}} {{term|thrucchen||to push|lang=enm}} (from {{etyl|ang|-}} {{term|þryccan||to push|lang=ang}}), {{etyl|enm|-}} {{term|scauten||to push, thrust|lang=enm}} (from {{etyl|non|-}} {{term|skota||lang=non}}), {{etyl|enm|-}} {{term|schoven||to push, shove|lang=enm}} (from {{etyl|ang|-}} {{term|scofian||lang=ang}}), {{etyl|enm|-}} {{term|schuven||to shove, push|lang=enm}} (from {{etyl|ang|-}} {{term|scufan|scūfan|lang=ang}}, {{term|sceofan|scēofan|to shove, push, thrust|lang=ang}}), {{etyl|enm|-}} {{term|thuden||lang=enm}}, {{term|thudden||to push, press, thrust|lang=enm}} (from {{etyl|ang|-}} {{term|þydan|þȳdan|lang=ang}}, {{term|þyddan||to thrust, press, push|lang=ang}}).
 
 ===Pronunciation===
 * {{enPR|po͝osh}}, {{IPA|/pʊʃ/}}, {{X-SAMPA|/pUS/}}
