t+qu:[[yupay]] ([[WT:EDIT|Assisted]]) <count#21318949>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -192,6 +192,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Persian: {{t+|fa|شمردن|tr=šomordan}}
 * Polish: {{t+|pl|liczyć}}
 * Portuguese: {{t+|pt|contar}}
+* Quechua: {{t|qu|yupay}}
 * Rapa Nui: {{tø|rap|tataku}}
 * Romanian: {{t+|ro|număra}}
 * Romansch: {{t-|rm|enumerar}}, {{t-|rm|dumbrar}}
