t+mi:[[momi]] t+mi:[[ngote]] t+mi:[[mote]] ([[WT:EDIT|Assisted]]) <suck#21319767>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -108,6 +108,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti}}
 * Macedonian: {{t-|mk|цица|tr=cíca}}
 * Malay: {{t-|ms|hisap}}, {{t-|ms|sedut}}
+* Maori: {{t|mi|momi}}, {{t|mi|ngote}}, {{t|mi|mote}}
 * Norwegian: {{t-|no|suge}}
 * Persian: {{t+|fa|مکیدن|tr=makidan}}
 * Polish: {{t+|pl|ssać}}
