t+nl:[[straat]] ([[WT:EDIT|Assisted]]) <straight#21322521>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -339,6 +339,7 @@
 {{trans-top|five cards in sequence}}
 * Catalan: {{t+|ca|escala|f}}
 * Czech: {{t-|cs|postupka|f}}
+* Dutch: {{t|nl|straat|f}}
 * Finnish: {{t+|fi|suora}}
 * French: {{t+|fr|quinte|f}}
 * German: {{t+|de|Straße|f}}
