t+mi:[[pata]] ([[WT:EDIT|Assisted]]) <butter#21326251>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -253,7 +253,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|butere||butter|lang=ang}}, fro
 * Malay: {{t+|ms|mentega}}
 * Maltese: {{t+|mt|butir}}
 * Manx: {{t-|gv|eeym|m}}
-* {{trreq|mi}}
+* Maori: {{t|mi|pata}}
 * Marathi: {{t-|mr|माखणे|tr=mākhaṇe|sc=Deva}}
 * {{trreq|mwl}}
 * Mongolian: {{t-|mn|цөцгийн тос|tr=tsötsgiin tos|sc=Cyrl}}
