t+ko:[[찾다]] ([[WT:EDIT|Assisted]]) <find#21361572>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -93,7 +93,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 {{trans-mid}}
 * Kazakh: {{t|kk|табу|tr=tabw|sc=Cyrl}}
 * Khmer: {{t|km|រកឃើញ|tr=rɔɔk kʰəəñ|sc=Khmr}}
-* {{trreq|ko}}
+* Korean: {{t|ko|찾다|tr=chatda|sc=Kore}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[دیتنه‌وه‌]]}}, {{ku-Arab|[[دۆزینه‌وه‌]]}}
 * Kyrgyz: {{t|ky|табуу|tr=tabuu|sc=Cyrl}}
