--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -3,8 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{rfv-etymology}}
-First attested in {{etyl|enm|en}}, probably from {{etyl|gd|en}} {{term|stob||to prick, to prod, to push, to thrust|lang=gd}}.
+First attested in {{etyl|enm|en}}. Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, to push, to thrust|lang=gd}}; supposed by others to be from a {{etyl|sco|en}} word.
 
 ===Pronunciation===
 * {{enPR|stăb}}, {{IPA|/stæb/}}, {{X-SAMPA|/st{b/}}
