--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -33,25 +33,22 @@ There are minor differences in where the list stroke of the top component (top-l
 
 ==Japanese==
 
-===Noun===
-{{ja-noun|k|hira=はる|rom=haru}}
-
-# (''season'') [[spring#Noun|spring]]
-
 ===Kanji===
 {{ja-kanji|grade=2|rs=日05}}
 
-# {{defn|lang=ja|sort=日05}}
+# [[spring#Noun|spring]] {{gloss|season}}
 
 ====Readings====
-* {{ja-readings|on=[[しゅん]] ([[shun]])|kun=[[はる]] ([[haru]])}}
+* {{ja-readings
+|goon=[[しゅん]] (shun)
+|kanon=[[しゅん]] (shun)
+|kun=[[はる]] (haru)}}
 
 ====Synonyms====
 * [[春季]] ([[しゅんき]], [[shunki]]): [[spring]]
 * [[春期]] ([[しゅんき]], [[shunki]]): [[spring]]
 
 ====Compounds====
-
 * [[小春]] ([[こはる]], [[koharu]]): [[early autumn]], [[Indian summer]]
 * [[小春日和]] ([[こはるびより]], [[koharubiyori]]): [[early autumn]], [[Indian summer]]
 * [[常春]] ([[とこはる]], [[tokoharu]]): [[everlasting spring]]
@@ -71,6 +68,11 @@ There are minor differences in where the list stroke of the top component (top-l
 * [[来春]] ([[らいしゅん]], [[raishun]]): [[next spring]]
 * [[翌春]] ([[よくしゅん]], [[yokushun]]): [[next spring]]
 * [[春分]] ([[しゅんぶん]], [[shunbun]]) [[spring equinox]], [[vernal equinox]]
+
+===Noun===
+{{ja-noun|k|hira=はる|rom=haru}}
+
+# [[spring#Noun|spring]] {{gloss|season}}
 
 [[Category:1000 Japanese basic words|はる]]
 [[Category:ja:Calendar terms|はる]]
