--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -112,6 +112,7 @@ See the usage notes in the entry ''[[blond]]''.
 [[io:blonde]]
 [[it:blonde]]
 [[ku:blonde]]
+[[ky:blonde]]
 [[lo:blonde]]
 [[hu:blonde]]
 [[mg:blonde]]
