--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -374,3 +374,4 @@ From {{etyl|ang|sco}} {{term|brecan|lang=ang}}, from {{etyl|gem-pro|sco}} {{reco
 [[uk:brick]]
 [[vi:brick]]
 [[zh:brick]]
+[[ky:brick]]
