Quote added <vomit#21396348>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -12,12 +12,14 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * {{audio|En-us-vomit.ogg|audio (US)}}
 
 ===Verb===
-{{en-verb}}
+{{en-verb|vomit|t|ed}}
 
 # To [[regurgitate]] the contents of a [[stomach]]; [[puke]].
 #* Bible, Jonah ii. 10
 #*: The fish {{...}} '''vomited''' out Jonah upon the dry land.
 # To eject from any hollow place; to belch forth; to emit.
+#* {{quote-news|date=2012|author=John Branch|title=Snow Fall : The Avalanche at Tunnel Creek|newspaper=New York Time|url=http://www.nytimes.com/projects/2012/snow-fall/?smid=fb-nytimes&WT.z_sma=SP_SNT_20130415#/?part=tunnel-creek}}
+#*: After about a minute, the creek bed '''vomited''' the debris into a gently sloped meadow. Saugstad felt the snow slow and tried to keep her hands in front of her. 
 #* Milton
 #*: Like the sons of Vulcan, '''vomit''' smoke.
 
