t+eu:[[oliba]] ([[WT:EDIT|Assisted]]) <olive#21421018>

--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -45,7 +45,7 @@
 * Asturian: {{t-|ast|aceituna|f}}
 * Azeri: {{t+|az|zeytun}}
 * {{trreq|ba}}
-* {{trreq|eu}}
+* Basque: {{t|eu|oliba}}
 * {{trreq|be}}
 * {{trreq|bn}}
 * {{trreq|br}}
