/* Cantonese */ added "jyut=" (jyutping) data -- gau6 -- to /yue-hanzi/ template <旧#21430108>

--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -24,7 +24,7 @@ In current form, {{Han compound|〡|t1=one|日|t2=day}}, representing the day be
 ==Cantonese==
 
 ===Hanzi===
-{{yue-hanzi|jyut=|y=[[gau6]]|tra=舊}}
+{{yue-hanzi|jyut=[[gau6]]|y=gau6|tra=舊}}
 
 # {{defn|lang=yue|sort=日01}}
 
