--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -164,7 +164,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Icelandic: {{t+|is|telja}}
 * Ido: {{t+|io|kontar}}
 * Indonesian: {{t+|id|menghitung}}, {{t+|id|hitung}}
-* Irish: {{t+|ga|áirigh}}, {{t+|ga|comhair}}
+* Irish: {{t+|ga|ríomh}}, {{t+|ga|áirigh}}, {{t+|ga|comhair}}
 * Italian: {{t+|it|contare}}
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
 * Kazakh: {{t|kk|санау|tr=sanaw|sc=Cyrl}}
